--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </nav>
     </header>
     <main>
+        <button><h2>MENU</h2></button>
         <div id="order">
         </div>
     </main>
