--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morning Breeze</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="Beverages.js"></script>
+    <script type="text/javascript" src="DBLoaded.js"></script>
+    <script type="text/javascript" src="loader.js"></script>
+    <script type="text/javascript" src="drinks.js"></script>
 </head>
 
 <body>
@@ -23,7 +28,10 @@
         </nav>
     </header>
     <main>
-        <button><h2>MENU</h2></button>
+        <div id="allBeverages"></div>
+
+        <!--<button id="menu" onclick="drinks.js"><h2>MENU</h2></button> -->
+        <h2 id="menu" >MENU</h2>
         <div id="order">
         </div>
     </main>
