--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width   , initial-scale=1.0">
     <title>Morning Breeze</title>
-    <link rel="stylesheet" href="assets/css/style.css">
     <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
     <script type="text/javascript" src="Beverages.js"></script>
     <script type="text/javascript" src="DBLoaded.js"></script>
     <script type="text/javascript" src="loader.js"></script>
-    <script type="text/javascript" src="drinks.js"></script>
+    <script type="text/javascript" src="assets/javascript/drinks.js"></script>
+    <script type="text/javascript" src="drag.js"></script>
 </head>
 
 <body>
@@ -35,7 +36,7 @@
         <div id="order">
         </div>
     </main>
-    <aside>
+    <aside id="aside" ondrop="drop(event)" ondragover="allowDrop(event)">
         <button type="submit">Order</button>
     </aside>
     <footer>
