Implemented login functionality
Added functionality for a "Login button" which pops up a window for logging in as different roles. Refactored code and cleaned up html & css. JS documentation to be added...

--- a/manager.html
+++ b/manager.html
@@ -40,7 +40,7 @@
                 <button class="btn btn-nav" onclick="sendHome()">Home</button>
             </div>
             <p>
-            <h1>Home</h1>
+            <h1>Manager Zone</h1>
             </p>
         </nav>
         <div class="dropdown">
