Basic table design

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="menu-button-wrapper">
                 <button class="btn btn-nav" onclick="sendHome()">Home</button>
             </div>
-            <h1>Home</h1>
+            <h1>Choose your table: </h1>
         </nav>
         <div class="dropdown">
             <button class="dropbtn btn" onclick="show_login()">Login</button>
@@ -47,12 +47,84 @@
 
     </header>
     <main>
+        <div id="table-window">
+            <div class="table">
+                <button class="table-button">
+                    1
+                    <img src="assets/images/kitchen-table.svg"></img>
+                </button>
+            </div>
+            <div class="table">
+                <button class="table-button">
+                    2
+                    <img src="assets/images/kitchen-table.svg"></img>
+                </button>
+            </div>
+            <div class="table">
+                <button class="table-button">
+                    3
+                    <img src="assets/images/kitchen-table.svg"></img>
+                </button>
+            </div>
+            <div class="table">
+                <button class="table-button">
+                    4
+                    <img src="assets/images/kitchen-table.svg"></img>
+                </button>
+            </div>
+            <div class="table">
+                <button class="table-button">
+                    5
+                    <img src="assets/images/kitchen-table.svg"></img>
+                </button>
+            </div>
+            <div class="table">
+                <button class="table-button">
+                    6
+                    <img src="assets/images/kitchen-table.svg"></img>
+                </button>
+            </div>
+            <div class="table">
+                <button class="table-button">
+                    7
+                    <img src="assets/images/kitchen-table.svg"></img>
+                </button>
+            </div>
+            <div class="table">
+                <button class="table-button">
+                    8
+                    <img src="assets/images/kitchen-table.svg"></img>
+                </button>
+            </div>
+            <div class="table">
+                <button class="table-button">
+                    9
+                    <img src="assets/images/kitchen-table.svg"></img>
+                </button>
+            </div>
+            <div class="table">
+                <button class="table-button">
+                    10
+                    <img src="assets/images/kitchen-table.svg"></img>
+                </button>
+            </div>
+            <div class="table">
+                <button class="table-button">
+                    11
+                    <img src="assets/images/kitchen-table.svg"></img>
+                </button>
+            </div>
+            <div class="table">
+                <button class="table-button">
+                    12
+                    <img src="assets/images/kitchen-table.svg"></img>
+                </button>
+            </div>
+        </div>
         <div id="all-beverages"></div>
         <button id="menu">
             <h2>MENU</h2>
         </button>
-        <div id="order">
-        </div>
     </main>
     <aside>
         <button type="submit" class="btn">Order</button>
