Can add and remove beverages.

--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
         </button>
     </main>
     <aside>
+        <div id="cart-items"></div>
+        <span id="total-price"></span>
         <button type="submit" class="btn">Order</button>
     </aside>
     <footer>
