går nu att trycka på order och detta läggs in i json filen över alla köp i baren. Att reducera går ej då stock funktionerna inte finns i denna branch/main

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="assets/javascript/model/data_model.js"></script>
     <script src="assets/javascript/controller/user_controller.js"></script>
     <script src="assets/javascript/controller/nav_controller.js"></script>
+   <!-- <script src="assets/javascript/controller/order.js"></script> -->
 </head>
 
 <body>
@@ -129,7 +130,7 @@
     <aside>
         <div id="cart-items"></div>
         <span id="total-price"></span>
-        <button type="submit" class="btn">Order</button>
+        <button id="order" type="submit" class="btn">Order</button>
     </aside>
     <footer>
         <p>
