--- a/stockManagement.html
+++ b/stockManagement.html
@@ -24,7 +24,7 @@
       </div>
 
       <div class="form1">
-	<h1>ADD A PRODUCT TO STOCK</h1>
+	<h1>ADD A NEW PRODUCT TO STOCK</h1>
 	<form id="addProdForm" action="">
 	  <label for="pname">Product name:</label>
 	  <input type="text" id="pname" name="pname" required><br><br>
@@ -84,4 +84,4 @@
     <div id="displayDB"></div>
 
   </body>
-  </html>
+  
