omstrukturerade innehållet mer efter MVC och la till undo - redo

--- a/index.html
+++ b/index.html
@@ -132,6 +132,12 @@
         <button type="submit" class="btn">Order</button>
     </aside>
     <footer>
+        <button id="undo">
+            <p>UNDO</p>
+        </button>
+        <button id="redo">
+            <p>REDO</p>
+        </button>
         <p>
             The Morning Breeze Group
         </p>
