Documentation and minor fixes

--- a/stockManagement.html
+++ b/stockManagement.html
@@ -60,18 +60,12 @@
 
     </div>
 
-    <div class="stock1" id="seeAvailabilityOfAProd">
-      <button class="button1" id="seeAProductInStock" onclick="seeAvailabilityOfProduct()">SEE AVAILABILITY OF A PRODUCT</button>
+    <div class="stock1" id="refill">
+      <button class="button1" id="orderRefill" onclick="doOrderRefill()">ORDER REFILL</button>
       Product name:
       <span class="field1" id="productName5" contenteditable="true"></span>
-    </div>
-
-    <div class="stock1" id="refill">
-      <button class="button1" id="orderRefill" onclick="">ORDER REFILL</button>
-      Product name:
-      <span class="field1" id="productName6" contenteditable="true"></span>
       Quantity to order:
-      <span class="field1" id="productQuantity6" contenteditable="true"></span>
+      <span class="field1" id="productQuantity5" contenteditable="true"></span>
 
     </div>
 
@@ -84,4 +78,4 @@
     <div id="displayDB"></div>
 
   </body>
-  
+  </html>
