--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+ File: index.html
+ Group: Morning Breeze
+ The file is the HTML file of the program.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -146,3 +152,7 @@
 </body>
 
 </html>
+
+<!--
+ END of file index.html
+-->
