Added additional roles

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             <div class="menu-button-wrapper">
                 <button class="btn btn-nav" id="button-home">Home</button>
             </div>
-            <h1>Choose your table: </h1>
+            <h1 id="current-user-table">Choose your table: </h1>
+            <h1 id="current-user-privilage"></h1>
         </nav>
         <button class="btn login-vip">Login</button>
     </header>
